2024.7.18 Fix
Fixed overlap of code

--- a/sass/blocks/_links.scss
+++ b/sass/blocks/_links.scss
@@ -34,14 +34,14 @@
     width: 1em;
     height: 1em;
     margin-right: 0.25em;
-    fill:$high-contrast; 
+    fill: var(--color-accent);
   }
 } 
 header .link-github {
   color: var(--color-accent);
 }
 .page-footer .link-github {
-  color:var(--color-high-contrast);
+  color:var(--color-accent);
 }
 
 // applies to most links except those in nav, in footer
@@ -58,6 +58,7 @@ header .link-github {
   transition: 180ms all ease-in-out;
   line-height: 1;
   text-align: center;
+  // color: var(--color-contrast);
 
   &:hover,
   &:focus {
