--- a/sass/compositions/_footer.scss
+++ b/sass/compositions/_footer.scss
@@ -5,14 +5,8 @@
 *   'page-footer'.
 */
 .page-footer {
-  background-color: $bg-color-footer;
   position: relative;
   padding: 3rem 1rem;
-
-
-  /*background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='36' height='72' viewBox='0 0 36 72'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23d2fbf7' fill-opacity='1'%3E%3Cpath d='M2 6h12L8 18 2 6zm18 36h12l-6 12-6-12z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  background-repeat: repeat-x;
-  background-position: center -34px;*/
 
   &::before {
 
@@ -22,6 +16,7 @@
     transform: translate(-50%, -100%);
     font-size: 3rem;
     content: "S";
+    color: var(--color-contrast);
   }
 
   p:first-child {
@@ -33,6 +28,7 @@
 
   p, a {
     color: $extra-light;
+    text-align: center;
   }
 
   ul {
